--- a/API/pyproject.toml
+++ b/API/pyproject.toml
@@ -5,6 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "celery>=5.6.2",
     "fastapi>=0.128.0",
+    "pydantic-settings>=2.12.0",
+    "redis>=7.1.0",
     "uvicorn>=0.40.0",
 ]
