--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,6 @@ services:
   redis:
     image: redis:alpine
     container_name: redis_db
-    ports:
-      - "6379:6379"
     networks:
       - internal
 
@@ -22,16 +20,16 @@ services:
     networks:
       - internal
 
-  # Worker de Celery para manejo de colas
+  # Worker de Celery para manejo de colas con 5 concurrentes
   worker:
     build:
       context: ./API
       dockerfile: Dockerfile
     container_name: celery_worker
-    command: celery -A config.celery_config.celery_app worker --loglevel=info
+    command: celery -A config.celery_config.celery_app worker --loglevel=info --concurrency=5
     environment:
       - CELERY_BROKER=redis://redis:6379/0
-      - CELERY_BACKEND=redis://redis:6379/0
+      - CELERY_BACKEND=redis://redis:6379/1
       - C_FORCE_ROOT=true
     depends_on:
       - redis
@@ -47,8 +45,8 @@ services:
     container_name: go_gateway
     ports:
       - "8080:8080"
-    environment:
-      - FASTAPI_URL=http://api:8000
+    env_file:
+      - .env
     depends_on:
       - api
     expose:
